added evo project

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
           <span id="proj_extra" class="extra hidden">
             <img id="scoli" class="proj section-link unclicked button" src="new_images/scoliosis.png" alt="">
             <img id="food" class="proj section-link unclicked button" src="new_images/food_waste.png" alt="">
+            <!--<img id="vision" class="proj section-link unclicked button" src="new_images/cv.jpg" alt="">
+            <img id="nlp" class="proj section-link unclicked button" src="new_images/nlp.png" alt="">
+            <img id="datamining" class="proj section-link unclicked button" src="new_images/datamining.png" alt="">
+            <img id="ir" class="proj section-link unclicked button" src="new_images/ir.png" alt="">!-->
+            <img id="ec" class="proj section-link unclicked button" src="new_images/ec.png" alt="">
             <img id="robot" class="proj section-link unclicked button" src="new_images/robot_icon.png" alt="">
             <img id="gis" class="proj section-link unclicked button" src="new_images/gislogo.png" alt="">
             <img id="arch" class="proj section-link unclicked button" src="new_images/arch.png" alt="">
